getting rid of `produce` method

--- a/app.ini
+++ b/app.ini
@@ -21,7 +21,7 @@ args=(sys.stdout,)
 
 [handler_fileHandler]
 class=FileHandler
-level=DEBUG
+level=INFO
 formatter=commonFormatter
 args=('logs\main.log',)
 
