--- a/log.ini
+++ b/log.ini
@@ -1,4 +1,3 @@
-# Logging
 [loggers]
 keys=root
 
@@ -15,7 +14,7 @@ propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
-level=DEBUG
+level=INFO
 formatter=commonFormatter
 args=(sys.stdout,)
 
